# decentralized-inference

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEMAND_DESIGN.md  Justfile  MLX.md  MLX_BACKEND_PLAN.md  MoE.md  MoE_DEPLOY_DESIGN.md  MoE_PLAN.md  PLAN.md  PLUGINS.md  README.md  RELEASE.md  ROADMAP.md  bench-b2b.sh  bench.sh  demo.sh  install.sh  latency-proxy.py  message_protocol.md  notes.md  run.sh
mesh-llm/: AGENTS.md  Cargo.toml  DESIGN.md  MULTI-MODEL.md  PASSIVE-MODE.md  README.md  TESTING.md  TODO.md  build.rs  test-mesh.sh
mesh-llm/docs/: DESIGN.md  SD_DESIGN.md  TESTING.md
mesh-llm/examples/: solo.rs
mesh-llm/models/: metadata.toml
mesh-llm/plugin/: Cargo.toml
mesh-llm/plugin/src/: runtime.rs
mesh-llm/proto/: plugin.proto
mesh-llm/src/: api.rs  autoupdate.rs  backend.rs  benchmark.rs  console.html  console.rs  download.rs  election.rs  hardware.rs  launch.rs  lib.rs  llama_ffi.rs  main.rs  mesh.rs  moa.rs  moe.rs  nostr.rs  pipeline.rs  plugin.rs  proxy.rs  router.rs  telemetry.rs  tunnel.rs
mesh-llm/src/api/: hub.rs
mesh-llm/src/backend/: llama.rs  mod.rs  vllm.rs
mesh-llm/src/models/: mod.rs
mesh-llm/src/plugins/: mod.rs
mesh-llm/src/plugins/example/: Cargo.toml
mesh-llm/src/plugins/inference/: mod.rs
mesh-llm/src/plugins/mlx-native/: Cargo.toml  NOTICE-exo.md  README.md
mesh-llm/ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
mesh-llm/ui/src/: App.tsx  index.css  main.tsx
mesh-llm/ui/src/components/: brand-icon.tsx  chat-markdown-message.tsx  mesh-llm-wordmark.tsx  (+1 more)
(+101 files in other folders)
