[package]
name = "mesh-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.96"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.9"
base64 = "0.22"
dirs = "6.0.0"
hex = "0.4.3"
