[package]
name = "mesh-llm-mlx"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
native-mlx = [
    "dep:mlx-rs",
    "dep:mlx-lm",
    "dep:mlx-lm-utils",
]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive"] }
mesh-llm-plugin = { path = "../../../plugin" }
rmcp = { version = "1.2", features = ["server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

mlx-rs = { git = "https://github.com/oxideai/mlx-rs", optional = true }
mlx-lm = { git = "https://github.com/oxideai/mlx-rs", package = "mlx-lm", optional = true }
mlx-lm-utils = { git = "https://github.com/oxideai/mlx-rs", package = "mlx-lm-utils", optional = true }

[dev-dependencies]
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }
